# ebay-library

./: .gitignore  README.md  REFACTOR_PLAN.md  pyproject.toml
ebay_library/: __init__.py  config.py  download.py  errors.py  fx.py
ebay_library/parsing/: __init__.py  catalog.py  item.py  models.py  normalize.py  page_state.py  selectors.py  zipstate.py
ebay_library/worker/: __init__.py  fetch.py  navigation.py  zipcode.py
ebaylib/: __init__.py  errors.py  models.py  store.py  urls.py  worker.py
ebaylib/browser/: __init__.py  readiness.py  session.py
ebaylib/html/: __init__.py  item.py  normalize.py  page_state.py  selectors.py  srp.py
ebaylib/http/: __init__.py  fx.py
specs/: antibot_localization.md  architecture.md  catalog_flow.md  catalog_selectors.md  item_flow.md  item_selectors.md  page_readiness.md  pitfalls.md  traffic_filtering.md
tests/: test_catalog.py  test_item.py  test_page_state.py  test_session.py  test_worker.py
