[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-library"
version = "0.1.0"
description = "eBay parsing library — методы парсинга каталога и карточек для воркеров"
requires-python = ">=3.11"
dependencies = [
    "asyncpg",
    "beautifulsoup4",
    "httpx",
    "playwright",
]

[tool.setuptools.packages.find]
include = ["ebaylib*"]
